# vinut-stock

./: .env  Cargo.toml  stocks_api_postman_collection.json  test_api.sh  test_results.txt
examples/: simulate_data.rs
migrations/: 20230101000000_init.sql  20230101000002_add_blocked_to_users.sql  20230101000003_dashboard_views.sql  20260127000000_fix_currency_schema.sql  20260128000000_increase_precision.sql  20260129000000_force_fix_report.sql  20260129000001_add_stock_to_report_view.sql  20260129000002_add_product_status.sql  20260321000000_add_payment_fields_to_sales.sql  20260324000000_purchases_workflow.sql  20260329000000_add_payment_to_quotations.sql
src/: config.rs  db.rs  docs.rs  main.rs  middleware.rs  routes.rs  security.rs
src/handlers/: auth.rs  mod.rs  product.rs  purchase.rs  quotation.rs  report.rs  sale.rs  settings.rs
src/models/: mod.rs  product.rs  purchase.rs  quotation.rs  sale.rs  user.rs
