[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "macros",
    "migrate",
    "rust_decimal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
futures = "0.3"
futures-util = "0.3"
rust_decimal = { version = "1.33", features = ["db-postgres", "serde-float"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
